assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Open+Sans&display=swap');
* {
    margin: 0;
    padding: 0;
    border: none;
}
/*General body styling*/
body {
    font-family: "Libre Baskerville", "Open Sans", serif;
    font-weight: 400;
    font-size: 1rem;
    color: #272635; 
    text-align: center;
    width: 100%;
    height: 100%;
    background: url('../images/rocky_mountain.jpg') no-repeat center center fixed;
    background-size: cover;  
    height: fit-content;
}

/*Header and navigation*/
header {
    background-color: #2c5530;
    color: #F2F2F2;
    max-height: 300px;
    grid-area: header;
    text-align: center;
    padding: 20px;
    font-size: 2.25rem;
    letter-spacing: 2px;
}

nav a {
    text-decoration: none;
    text-transform: uppercase;
    font-size: 40%;
    color: #F2F2F2;   
}

nav a:hover {
    color: #82cae1 ;
    border-bottom: 1px solid #F2F2F2;
}

.active {
    color:  #82cae1;
    border-bottom: 1px solid whitesmoke;
}

nav ul {
    margin: 0;
    padding: 0;
}

nav li {
    display: block;
    text-align: center;
    padding: 0;  
    margin: 0;
}

/*Quiz Card styling*/
.quizInfo {
    font-size: 1rem;
    float: right;
    padding: 10px;
    display: flex;
    align-items: baseline;
    background-color: #0090C1;
    margin: 10px;
}


/*To hold all quiz elements and to create a grid display*/
#quizContainer {
    padding-top: 30px ;
    display: grid;
    max-width: 100%;
    grid-template-columns: 1fr 3fr 1fr;
    border-radius: 20px;
    text-align: center;
    grid-template-areas: "header header header"
                         ". . . "
                         ". quizCard . "
                         ". . . "
                        
}
/* Main card to display quiz informaiton */
#quizCard {
    
    grid-area: quizCard;
    /* min-height: 70%;
    max-width: 90%; */
    background-color: #d1211e;
    color: #FFFDFE;
    text-align: center;
    padding: 10px;
    margin: 10px;
  
}

#welcomeMessage p {
    padding: 5px;
    margin: 5px;
}

#quizInfo {
    display: flex;
    justify-content: center;
    align-items: center;
}


#question {
   
    font-size: 1.25rem;
    text-decoration: solid;
}

#multiChoice {
    text-align: left;
    list-style-type: none;
}
 

li {
    padding: 10px;
    margin: 5px;
    margin-left: 10px;
}

#startQuiz {
    padding: 15px;
    background-color: #2c5530 ;
    color: #FFFDFE;
    border: #FFFDFE 2px;
    cursor: pointer;
    text-align: center;
    width: 50%;
    vertical-align:center;
    margin-top:10px;
    margin-bottom:10px;
    text-transform: uppercase;
   
}

#startQuiz:hover {
    cursor: pointer;
    background-color: #0E2C42;
    color: #FFFDFE;
}

#nextQuestion {
    cursor: pointer;
    background-color: #0E2C42;
    color: #FFFDFE;
    padding: 10px;
    text-align: center;
    margin-top: 10px;
    margin: auto;
    margin-bottom: 20px;
    text-transform: uppercase;

}

#nextQuestion:hover {
    cursor: pointer;
    background-color: #094774;
    color: #FFFDFE;
}

#finish {
    padding: 15px;
    background-color: #2c5530 ;
    color: #FFFDFE;
    border: #FFFDFE 2px;
    cursor: pointer;
    padding: 10px;
    text-align: center;
    margin-top: 10px;
    margin: auto;
    margin-bottom: 20px;
    text-transform: uppercase;  
}

#finish:hover {
    cursor: pointer;
    background-color: #0E2C42;
    color: #FFFDFE;
}

p {
    padding: 10px;
    margin: 10px;
}

ul #questionCounter {
    text-align: center;
    padding: 20px;
    margin-bottom: 15px;
    align-self: baseline;
    letter-spacing: 4px;
    font-weight: bold ;
}

h1 {
    font-size: 25px;
}

/*Fun facts styling*/
#background {
    background-image: none;
}
#grid_container_gallery {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-areas:
                        "gallery_intro"
                         "gallery"
                         "contact_form";
}

.gallery_intro {
    grid-area: gallery_intro;
    padding: 10px;
}

/* Fancybox Carousel*/
#gallery {
    grid-area: gallery;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(10em, 1fr));
    grid-auto-rows: auto;
    grid-gap: 1.5em;
    padding: 1.5em;
}


#gallery a {
    display: flex;
    flex-wrap: wrap;
}

#gallery a img {
   
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

/*Form*/

.container {
    grid-area: contact_form;
    background-color: #d1211e;
    text-align: center;
    color: #F2F2F2;
    
}

    
 h2 h3 { 
    padding: 10px;
    margin: 10px;
    text-align: center;
 }

 .text-center {
    padding: 5px;
    margin: 5px;
 }
 
#form-control {
    width: 40%;
    padding: 5px 10px;
    margin: 5px 0;
    border: 2px solid  #2c5530;
    box-sizing: border-box;
}

input[type=text] {
    width: 60%;
    padding: 5px 10px;
    margin: 5px 0;
    border: 2px solid  #2c5530;
    box-sizing: border-box;
}


input[type=email] {
    width: 60%;
    padding: 5px 10px;
    margin: 5px 0;
    border: 2px solid  #2c5530;
    box-sizing: border-box;
}

button {
    width: 20%;
    padding: 5px 10px;
    margin: 5px 0;
    background-color: #2c5530;
    color: #FFFDFE;
}

input[type=name] {
    width: 60%;
    padding: 5px 10px;
    margin: 5px 0;
    border: 2px solid  #2c5530;
    box-sizing: border-box;
}

textarea {
    width: 60%;
    padding: 5px 10px;
    margin: 5px 0;
    border: 2px solid  #2c5530;
    box-sizing: border-box;
}

input[type="radio"] {
    margin-right: 10px;
  }
  
  

